--- a/palindrome.html
+++ b/palindrome.html
@@ -5,24 +5,24 @@
         <link href="css/styles.css" rel="stylesheet" type="text/css">
         <script src="js/jquery-1.11.3.js"></script>
         <script src="js/scripts.js"></script>
-        <title></title>
+        <title>Palindrome</title>
     </head>
     <body>
 
         <div class="container">
-
-            <form id="factorial">
+            <h1>Palindrome</h1>
+            <form id="palindrome">
 
                 <div class="form-group">
-                    <label for="factorial">Enter a number to compute its factorial</label>
-                    <input type="text" id="number">
+                    <label for="palindrome">Enter any word, phrase, number, or other sequence of characters:</label>
+                    <input type="text" id="input">
                 </div>
                 <button type="submit" class="btn">Find out!</button>
 
             </form>
 
             <div id="result">
-                <h1><span class="output"></span></h1>
+                <p><span class="input"></span> is <span class="not"></span> a palindrome.</p>
             </div>
 
         </div>
